Replace depricated Integer constructor